--- a/common/clasificacion.html
+++ b/common/clasificacion.html
@@ -14,7 +14,7 @@
 		.padd5B{
 			padding-bottom: 5px;
 		} 
-		.b3tableGrey {
+		.b3solidGrey {
 			border: 3px solid #a9a9a9;
 		}
 		.width25 {
@@ -23,7 +23,7 @@
 		.width70 {
 			width: 70px;
 		}
-		.width140 {
+		.maxwidth140 {
 			max-width: 140px;
 		}
 		.minwidth100 {
@@ -44,9 +44,9 @@
 			<tr>
 				<th scope="col" class="width25">Pos.</th>
 				<th scope="col" class="minwidth25 width25">&nbsp;&nbsp;</th>
-				<th scope="col" class="minwidth100 width140">Equipo</th>
-				<th scope="col" class="minwidth100 width140">Coach</th>
-				<th scope="col" class="minwidth100 width140">Valor equipo</th>
+				<th scope="col" class="minwidth100 maxwidth140">Equipo</th>
+				<th scope="col" class="minwidth100 maxwidth140">Coach</th>
+				<th scope="col" class="minwidth100 maxwidth140">Valor equipo</th>
 				<th scope="col" class="minwidth100 width70">Puntos</th>
 			</tr>
 			<tr>
