--- a/common/clasificacion.html
+++ b/common/clasificacion.html
@@ -40,7 +40,7 @@
 	<div class="container ">
 		<div class="padd50T padd5B"><span>Nombre Liga</span><span class="pull-right">Jornada X/Y</span></div>
 		<div>
-			<table class="table table-striped table-bordered table-hover table-condensed btable"> 
+			<table class="table table-striped table-bordered table-hover table-condensed b3solidGrey"> 
 			<tr>
 				<th scope="col" class="width25">Pos.</th>
 				<th scope="col" class="minwidth25 width25">&nbsp;&nbsp;</th>
