--- a/common/clasificacion.html
+++ b/common/clasificacion.html
@@ -4,9 +4,9 @@
 	<title>Clasificacion</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+		<link href="../css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+		<script src="../js/jquery-2.1.4.min.js" type="text/javascript"></script>
+		<script src="../js/bootstrap.min.js" type="text/javascript"></script>
 		<style>
 		.padd50T{
 			padding-top: 40px;
